infra/kubernetes/stg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shs-web-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: shs-web-ip-address
    networking.gke.io/managed-certificates: shs-web-certificate
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
  - host: teacher.shs-web-stg.calmato.jp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: teacher-gateway
            port:
              number: 8080
  - host: student.shs-web-stg.calmato.jp
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: student-gateway
            port:
              number: 8080
